# homework-8.2

./: .gitignore  README.md  connection.py  consumer.py  models.py  producer.py  pyproject.toml  requirements.txt  seed.py
data/: config.ini  phone_codes_ua.csv
